Add word break and target break line

--- a/frontend/assets/style/main.less
+++ b/frontend/assets/style/main.less
@@ -1655,4 +1655,17 @@ fieldset {
   }
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span,
+a {
+  // white-space: pre-line;
+  word-break: keep-all;
+}
+
 @import 'rtl.less';
