Add update and button check for review confirm

--- a/frontend/assets/style/main.less
+++ b/frontend/assets/style/main.less
@@ -1052,14 +1052,14 @@ fieldset {
 
 .el-popover {
   // disable arrow
-  margin: 0 !important;
+  // margin: 0 !important;
   border: 1px solid @colorTextMuted;
-  border-radius: 0;
+  // border-radius: 0;
   box-shadow: 0 0 12px 4px rgba(0, 0, 0, 0.24), 0 4px 16px 0 rgba(0, 0, 0, 0.12);
 
-  .popper__arrow {
-    display: none;
-  }
+  // .popper__arrow {
+  //   display: none;
+  // }
 
   &.CustomPopover {
     box-sizing: border-box;
