--- a/frontend/assets/style/variables.less
+++ b/frontend/assets/style/variables.less
@@ -11,7 +11,7 @@
 
 @colorTextPrimary: #404041;
 @colorTextSecondary: #6d6d6d;
-@colorTextMuted: #b9b9b9;
+@colorTextMuted: #777779;
 
 @colorGray: #9b9b9b;
 @colorGrayLight: #d6d6d6;
