INVENT home page refresh

--- a/frontend/assets/style/variables.less
+++ b/frontend/assets/style/variables.less
@@ -34,11 +34,13 @@
 
 @fontSizeBase: 14px;
 @fontSizeSmall: 12px;
+@fontSizeExtraSmall: 9px;
 @fontSizeMedium: 16px;
 @fontSizeLarge: 18px;
 @fontSizeLarger: 20px;
 @fontSizeTitle: 24px;
 @fontSizeHeading: 32px;
+@fontSizeHeadline: 36px;
 
 @appWidthMaxLimit: 1680px;
 @appWidthMinLimit: 1280px;
@@ -56,7 +58,7 @@
 @cardSizeSmall: 560px;
 @cardSizeMedium: 1024px;
 
-@landingMapHeight: 60vh;
+@landingMapHeight: 76vh;
 @landingMapMinHeight: 420px;
 
 /* Transition -------------------------- */
