--- a/frontend/assets/style/main.less
+++ b/frontend/assets/style/main.less
@@ -54,6 +54,10 @@
 // Reset font family for Element UI
 // --------------------------------------------------
 
+.debug {
+  outline: 1px solid red;
+}
+
 * {
   font-family: inherit;
   font-size: inherit;
@@ -1669,3 +1673,11 @@ a {
 }
 
 @import 'rtl.less';
+
+// --------------------------------------------------
+// Utility classes
+// --------------------------------------------------
+
+.text-center {
+  text-align: center;
+}
