INVENT home page refresh (#318)
* Fix currentPage is NaN

* INVENT home page refresh

* Code cleanup

* Search text update

Co-authored-by: Tibor Adam <tibor.adam@gmail.com>
Co-authored-by: Gyuri <f@pulilab.com>

--- a/frontend/assets/style/main.less
+++ b/frontend/assets/style/main.less
@@ -54,6 +54,10 @@
 // Reset font family for Element UI
 // --------------------------------------------------
 
+.debug {
+  outline: 1px solid red;
+}
+
 * {
   font-family: inherit;
   font-size: inherit;
