update inliner tool

--- a/django/templates/email/master.html
+++ b/django/templates/email/master.html
@@ -1,4 +1,4 @@
-<!-- To make css inline use this tool: https://inliner.cm/ -->
+<!-- To make css inline use this tool: https://templates.mailchimp.com/resources/inline-css/ -->
 
 {% load utils %}
 {% load staticfiles %}
