--- a/django/templates/email/master-inline.html
+++ b/django/templates/email/master-inline.html
@@ -1,4 +1,5 @@
-<!-- To make css inline use this tool: https://inliner.cm/ -->
+<!-- DO NOT EDIT THIS MANUALLY, IT SHOULD BE GENERATED FROM master.html by
+https://templates.mailchimp.com/resources/inline-css/ -->
 
 {% load utils %}
 {% load staticfiles %}
