Feature/remove CMS+Toolkit (#378)
* remove toolkit and cms files

* remove translation dumps

* remove stuff from core tests

* dropdb migration for cms

* remove coverage version from project

* drop toolkit tables migration

* password reset translate and templated

* add todo to project.models

* remove cms and toolkit from urls

* introduce project name var and remove cms and toolkit translations

* remove toolkit versioning and general tests

* remove project version (old coverage version) viewset

* remove toolkit version urls

* remove toolkit and toolkit versioning bindings from project

* fix country tests

* remove unused static

* remove flag content template

* update inliner tool

* Feature/remove CMS+Toolkit (frontend) (#379)

* Remove backend calls

* Remove coverage

Co-authored-by: Tibor Adam <tibor.adam@gmail.com>

Co-authored-by: Tibor <82872706+TiborPL@users.noreply.github.com>
Co-authored-by: Tibor Adam <tibor.adam@gmail.com>

--- a/django/templates/email/master-inline.html
+++ b/django/templates/email/master-inline.html
@@ -1,4 +1,5 @@
-<!-- To make css inline use this tool: https://inliner.cm/ -->
+<!-- DO NOT EDIT THIS MANUALLY, IT SHOULD BE GENERATED FROM master.html by
+https://templates.mailchimp.com/resources/inline-css/ -->
 
 {% load utils %}
 {% load staticfiles %}
@@ -469,29 +470,6 @@
                           </tbody>
                         </table>
                         <!-- /TEMPLATE: DONOR ADMIN -->
-
-
-                        <!-- TEMPLATE: FLAG CONTENT -->
-                        {% elif type == "flag_content" %}
-                        <h1 style="font-family:arial, sans-serif;line-height:1.4;margin-top:10px;margin-bottom:20px;margin-right:0;margin-left:0;font-size:20px;font-weight:700;" >{% trans "Reported content!" %}</h1>
-                        <h2 style="font-family:arial, sans-serif;font-weight:400;line-height:1.4;margin-top:10px;margin-bottom:20px;margin-right:0;margin-left:0;font-size:16px;" >{% trans "Notification" %}</h2>
-                        <p style="font-family:arial, sans-serif;font-size:14px;font-weight:normal;margin-top:0;margin-bottom:20px;margin-right:0;margin-left:0;padding-top:0;padding-bottom:0;padding-right:0;padding-left:0;" >{% trans "Content has been flagged as inappropriate. Please take action." %}</p>
-                        <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-border-horizontal-spacing:0px;-webkit-border-vertical-spacing:0px;box-sizing:border-box;width:100%;" >
-                          <tbody>
-                            <tr>
-                              <td align="left" style="font-family:arial, sans-serif;font-size:14px;vertical-align:top;padding-top:10px;padding-bottom:20px;" >
-                                <table border="0" cellpadding="0" cellspacing="0" style="border-collapse:collapse;mso-table-lspace:0pt;mso-table-rspace:0pt;-webkit-border-horizontal-spacing:0px;-webkit-border-vertical-spacing:0px;width:auto;" >
-                                  <tbody>
-                                    <tr>
-                                      <td style="font-family:arial, sans-serif;font-size:14px;vertical-align:top;text-align:center;background-color:#00AEEF;" > <a href="{% site_url %}{{ change_url }}" target="_blank" style="border-width:1px;border-style:solid;box-sizing:border-box;cursor:pointer;display:inline-block;font-size:14px;font-weight:bold;margin-top:0;margin-bottom:0;margin-right:0;margin-left:0;padding-top:10px;padding-bottom:10px;padding-right:20px;padding-left:20px;text-decoration:none;background-color:#00AEEF;border-color:#00AEEF;color:#FFFFFF;" >{% trans "Go to see content" %}</a> </td>
-                                    </tr>
-                                  </tbody>
-                                </table>
-                              </td>
-                            </tr>
-                          </tbody>
-                        </table>
-                        <!-- /TEMPLATE: FLAG CONTENT -->
 
 
                         <!-- TEMPLATE: STATUS REPORT -->
